k8s-manifest/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: App-application-namespace
  labels:
    team: App-spring

---
apiVersion: v1
kind: Namespace
metadata:
  name: Db-application-namespace
  labels:
    team: Db-spring
---
